--- a/Fund Transfer/src/main/resources/application.yml
+++ b/Fund Transfer/src/main/resources/application.yml
@@ -8,9 +8,9 @@ spring:
     ok: 200
 
   datasource:
-    url: jdbc:mysql://localhost:3306/fund_transfer_service
-    username: root
-    password: root
+    url: jdbc:mysql://54.224.1.57:3306/banking_team2
+    username: team2user
+    password: team2password
 
   jpa:
     hibernate:
