--- a/Transaction Service/src/main/resources/application.yml
+++ b/Transaction Service/src/main/resources/application.yml
@@ -6,9 +6,9 @@ spring:
     ok: 200
 
   datasource:
-    url: jdbc:mysql://localhost:3306/transaction_service
-    username: root
-    password: root
+    url: jdbc:mysql://54.224.1.57:3306/banking_team2
+    username: team2user
+    password: team2password
 
   jpa:
     hibernate:
