--- a/User Service/src/main/resources/application.yml
+++ b/User Service/src/main/resources/application.yml
@@ -10,9 +10,9 @@ spring:
     not_found: 404
 
   datasource:
-    url: jdbc:mysql://${MYSQL_HOST:localhost}:${MYSQL_PORT:3306}/${MYSQL_DB_NAME:user_service}
-    username: ${MYSQL_USER:root}
-    password: ${MYSQL_PASSWORD:root}
+    url: jdbc:mysql://54.224.1.57:3306/banking_team2
+    username: team2user
+    password: team2password
   jpa:
     hibernate:
       ddl-auto: update
@@ -21,7 +21,6 @@ spring:
       hibernate:
         format_sql: true
 
-
 app:
   config:
     keycloak:
@@ -29,4 +28,3 @@ app:
       realm: banking-service
       client-id: banking-service-api-client
       client-secret: 932OFITe8vtH4z0G9gem4Afd69JhbwrI
-
