--- a/api-gateway/src/main/resources/application.properties
+++ b/api-gateway/src/main/resources/application.properties
@@ -2,12 +2,36 @@
 spring.application.name=api-gateway
 server.port=8080
 
-# Eureka Client Configuration
-eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
-
-# Spring Cloud Gateway Configuration
-spring.cloud.gateway.routes[0].id=department-service
-spring.cloud.gateway.routes[0].uri=lb://department-service
-spring.cloud.gateway.routes[0].predicates[0]=Path=/department/**
-spring.cloud.gateway.routes[0].filters[0]=RewritePath=/department/(?<segment>.*), /${segment}
 spring.main.web-application-type=reactive
+spring.cloud.gateway.discovery.locator.enabled=true
+spring.cloud.gateway.discovery.locator.lower-case-service-id=true
+
+# Eureka Client Configuration
+eureka.client.service-url.defaultZone=http://localhost:8761/eureka
+
+# User Service
+spring.cloud.gateway.routes[0].id=user-service
+spring.cloud.gateway.routes[0].uri=lb://user-service
+spring.cloud.gateway.routes[0].predicates[0]=Path=/api/users/**
+
+# Fund Transfer Service
+spring.cloud.gateway.routes[1].id=fund-transfer-service
+spring.cloud.gateway.routes[1].uri=lb://fund-transfer-service
+spring.cloud.gateway.routes[1].predicates[0]=Path=/api/fund-transfers/**
+
+# Account Service
+spring.cloud.gateway.routes[2].id=account-service
+spring.cloud.gateway.routes[2].uri=lb://account-service
+spring.cloud.gateway.routes[2].predicates[0]=Path=/api/accounts/**
+
+# Transaction Service
+spring.cloud.gateway.routes[3].id=transaction-service
+spring.cloud.gateway.routes[3].uri=lb://transaction-service
+spring.cloud.gateway.routes[3].predicates[0]=Path=/api/transactions/**
+
+# Fund Transfer Service
+spring.cloud.gateway.routes[4].id=fund-transfer-service
+spring.cloud.gateway.routes[4].uri=lb://fund-transfer-service
+spring.cloud.gateway.routes[4].predicates[0]=Path=/api/fund-transfers/**
+
+#spring.cloud.gateway.routes[0].filters[0]=RewritePath=/users/(?<segment>.*), /${segment}
