--- a/user-service/src/main/resources/application.properties
+++ b/user-service/src/main/resources/application.properties
@@ -3,9 +3,9 @@ server.port=8081
 
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
 
-spring.datasource.url=jdbc:mysql://54.224.1.57:3306/banking_team2
-spring.datasource.username=team2user
-spring.datasource.password=team2password
+spring.datasource.url=jdbc:mysql://localhost:3306/user_service?createDatabaseIfNotExists=true
+spring.datasource.username=root
+spring.datasource.password=NewPassWord
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
