--- a/user-service/src/main/resources/application.properties
+++ b/user-service/src/main/resources/application.properties
@@ -3,7 +3,7 @@ server.port=8081
 
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
 
-spring.datasource.url=jdbc:mysql://54.224.1.57:3306/banking_team2
+spring.datasource.url=jdbc:mysql://54.224.1.57:3306/team2_user
 spring.datasource.username=team2user
 spring.datasource.password=team2password
 spring.jpa.hibernate.ddl-auto=update
