--- a/account-service/src/main/resources/application.properties
+++ b/account-service/src/main/resources/application.properties
@@ -7,9 +7,9 @@ spring.application.ok=200
 spring.application.bad_request=400
 spring.application.conflict=409
 spring.application.not_found=404
-spring.datasource.url=jdbc:mysql://localhost:3306/account_service?createDatabaseIfNotExists=true
-spring.datasource.username=root
-spring.datasource.password=NewPassWord
+spring.datasource.url=jdbc:mysql://54.224.1.57:3306/team2_user
+spring.datasource.username=team2user
+spring.datasource.password=team2password
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
