--- a/fund-transfer-service/src/main/resources/application.properties
+++ b/fund-transfer-service/src/main/resources/application.properties
@@ -1,9 +1,9 @@
-spring.application.name=user-service
-server.port=8081
+spring.application.name=fund-transfer-service
+server.port=8083
 
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
 
-spring.datasource.url=jdbc:mysql://54.224.1.57:3306/user_service?createDatabaseIfNotExist=true
+spring.datasource.url=jdbc:mysql://54.224.1.57:3306/fund_transfer_service?createDatabaseIfNotExist=true
 spring.datasource.username=team2user
 spring.datasource.password=team2password
 
@@ -12,3 +12,5 @@ spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+spring.application.ok=200
+spring.application.bad_request=400
