--- a/fund-transfer-service/pom.xml
+++ b/fund-transfer-service/pom.xml
@@ -5,14 +5,14 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.7.14</version>
+        <version>3.3.4</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
-    <groupId>org.training</groupId>
-    <artifactId>fundtransfer</artifactId>
+    <groupId>com.fund_transfer</groupId>
+    <artifactId>fund-transfer-service</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <name>Fund Transfer</name>
-    <description>Fund Transfer</description>
+    <description>Fund Transfer Service</description>
     <properties>
         <java.version>17</java.version>
         <spring-cloud.version>2021.0.8</spring-cloud.version>
