--- a/user-service/src/main/resources/application.properties
+++ b/user-service/src/main/resources/application.properties
@@ -3,12 +3,12 @@ server.port=8081
 
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
 
-#spring.datasource.url=jdbc:mysql://54.224.1.57:3306/user_service?createDatabaseIfNotExist=true
-#spring.datasource.username=team2user
-#spring.datasource.password=team2password
-spring.datasource.url=jdbc:mysql://localhost:3306/user_service
-spring.datasource.username=root
-spring.datasource.password=NewPassWord
+spring.datasource.url=jdbc:mysql://54.224.1.57:3306/user_service?createDatabaseIfNotExist=true
+spring.datasource.username=team2user
+spring.datasource.password=team2password
+#spring.datasource.url=jdbc:mysql://localhost:3306/user_service
+#spring.datasource.username=root
+#spring.datasource.password=NewPassWord
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
