--- a/fund-transfer-service/src/main/resources/application.properties
+++ b/fund-transfer-service/src/main/resources/application.properties
@@ -3,9 +3,9 @@ server.port=8083
 
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
 
-#spring.datasource.url=jdbc:mysql://54.242.99.68:3306/fund_transfer_service?createDatabaseIfNotExist=true
-#spring.datasource.username=team2user
-#spring.datasource.password=team2password
+spring.datasource.url=jdbc:mysql://54.242.99.68:3306/fund_transfer_service?createDatabaseIfNotExist=true
+spring.datasource.username=team2user
+spring.datasource.password=team2password
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
