--- a/account-service/src/main/resources/application.properties
+++ b/account-service/src/main/resources/application.properties
@@ -10,7 +10,7 @@ spring.application.not_found=404
 spring.datasource.url=jdbc:mysql://54.224.1.57:3306/account_service?createDatabaseIfNotExist=true
 spring.datasource.username=team2user
 spring.datasource.password=team2password
-#spring.datasource.url=jdbc:mysql://localhost:3306/account_service
+#spring.datasource.url=jdbc:mysql://localhost:3306/account_service?createDatabaseIfNotExist=true
 #spring.datasource.username=root
 #spring.datasource.password=NewPassWord
 spring.jpa.hibernate.ddl-auto=update
