--- a/user-service/src/main/resources/application.properties
+++ b/user-service/src/main/resources/application.properties
@@ -7,7 +7,7 @@ spring.datasource.url=jdbc:mysql://54.242.99.68:3306/user_service?createDatabase
 spring.datasource.username=team2user
 spring.datasource.password=team2password
 
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
