--- a/transaction-service/src/main/resources/application.properties
+++ b/transaction-service/src/main/resources/application.properties
@@ -11,7 +11,7 @@ spring.datasource.password=team2password
 #spring.datasource.username=root
 #spring.datasource.password=NewPassWord
 
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
