fix: Fixing logic of transaction to make internal transcation of fund working properly

--- a/api-gateway/src/main/resources/application.properties
+++ b/api-gateway/src/main/resources/application.properties
@@ -15,14 +15,14 @@ spring.cloud.gateway.routes[0].uri=lb://user-service
 spring.cloud.gateway.routes[0].predicates[0]=Path=/api/users/**
 
 # Account Service
-spring.cloud.gateway.routes[1].id=account-service
-spring.cloud.gateway.routes[1].uri=lb://account-service
+spring.cloud.gateway.routes[1].id=accountDto-service
+spring.cloud.gateway.routes[1].uri=lb://accountDto-service
 spring.cloud.gateway.routes[1].predicates[0]=Path=/api/accounts/**
 
 # Transaction Service
-spring.cloud.gateway.routes[2].id=transaction-service
-spring.cloud.gateway.routes[2].uri=lb://transaction-service
-spring.cloud.gateway.routes[2].predicates[0]=Path=/api/transactions/**
+spring.cloud.gateway.routes[2].id=transactionDto-service
+spring.cloud.gateway.routes[2].uri=lb://transactionDto-service
+spring.cloud.gateway.routes[2].predicates[0]=Path=/api/transactionDtos/**
 
 # Fund Transfer Service
 spring.cloud.gateway.routes[3].id=fund-transfer-service
