--- a/account-service/src/main/resources/application.properties
+++ b/account-service/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.application.name=account-service
+spring.application.name=accountDto-service
 server.port=8082
 
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
@@ -11,7 +11,7 @@ spring.datasource.url=jdbc:mysql://54.242.99.68:3306/account_service?createDatab
 spring.datasource.username=team2user
 spring.datasource.password=team2password
 
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
