--- a/transaction-service/src/main/resources/application.properties
+++ b/transaction-service/src/main/resources/application.properties
@@ -7,11 +7,7 @@ spring.datasource.url=jdbc:mysql://54.242.99.68:3306/transaction_service?createD
 spring.datasource.username=team2user
 spring.datasource.password=team2password
 
-#spring.datasource.url=jdbc:mysql://localhost:3306/transaction_service?createDatabaseIfNotExist=true
-#spring.datasource.username=root
-#spring.datasource.password=NewPassWord
-
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
