--- a/account-service/src/main/resources/application.properties
+++ b/account-service/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.application.name=accountDto-service
+spring.application.name=account-service
 server.port=8082
 
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
@@ -16,3 +16,6 @@ spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+
+jwt.secret=team2-secret-key
+account.prefix=060014
